# CSC510

./: .coveragerc  .gitignore  CI-CD-README.md  CODECOV_CHECKLIST.md  CODECOV_SETUP_REQUIRED.md  CONTRIBUTING.md  COVERAGE_SETUP.md  HEALTH_PROFILE_WIZARD_IMPLEMENTATION.md  HELLO_WORKFLOW_ISSUES.md  IMPLEMENTATION_COMPLETE.txt  IMPLEMENTATION_SUMMARY.md  LICENSE.md  QUICK_START_CODECOV.md  README.md  codecov.yml  create-issues.sh  integration-test.sh  package-lock.json  requirements.txt
proj1/1b1_rag_dify/: .env.example  .flake8  .gitignore  1b1 Retreival Chatbot.yml  README.md  download_md_from_jina.py  download_pdfs.py  main.py  pyproject.toml  split_links.py  test_upload_to_dify.py  upload_to_dify.py
proj1/1b1_rag_dify/assets/: normal_links.txt  pdf_links.txt
proj2/backend/: .env.example  .gitignore  DATABASE_SETUP.md  M1_MAC_SETUP.md  README.md  SETUP_GEMINI_API.md  auth.py  create_init_database.py  database.py  emailer.py  index.py  models.py  pyproject.toml  ruff.toml  setup_dev_environment.py  test_api.py  test_index.py
proj2/backend/alembic/: env.py
proj2/backend/alembic/versions/: 001_initial.py  002_health_profile.py  003_add_user_role.py  004_add_allergen_audit_log_table.py  004_add_meal_tables.py  005_add_user_audit_log_table.py  006_add_goals_table.py  007_add_mental_wellness_tables.py  008_add_restaurant_and_menu_items_tables.py  009_add_user_timezone_field.py  010_rename_wellness_log_date_to_occurred_at_utc.py  011_merge_multiple_heads.py  012_add_menu_item_allergens_association.py  08d3e2054895_add_menu_item_allergens_association_.py  206c2802d4a4_merge_multiple_heads.py  52b20fbdcbf3_initial_migration.py  (+3 more)
proj2/backend/db_initialize/: create_admin_user.py  create_init_database.py  init_allergens.py  seed_wellness_logs.py
proj2/backend/docs/: ADMIN_SYSTEM_GUIDE.md  JWT_IMPLEMENTATION_SUMMARY.md  JWT_IMPLEMENTATION_SUMMARY_EN.md
proj2/backend/scripts/: clear_wellness_data.py  seed_restaurants.py
proj2/backend/tests/: README.md  TEST_SUMMARY.md  conftest.py  test_admin.py  test_auth.py  test_chat.py  test_goal_service.py  test_index.py  test_meal_service.py  test_recommend_router.py  test_recommend_service.py  test_recommendation_api.py  test_recommendation_schema.py  test_recommendation_scoring.py  test_seed_restaurants.py  test_single_daily_entry.py  test_verification.py
(+526 files in other folders)
