[project]
name = "1b1-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ruff>=0.12.12",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "coverage>=7.6.10",
]
