[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.118.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.3",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "coverage>=7.6.10",
]
